--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,12 +55,13 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\WindmillController.cs" />
     <Compile Include="Assets\Scripts\RNGVerticalBounce.cs" />
     <Compile Include="Assets\Scripts\LavaController.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\SpawnPoint.cs" />
     <Compile Include="Assets\Scripts\EnemyController.cs" />
-    <Compile Include="Assets\Scripts\WindmillController.cs" />
+    <Compile Include="Assets\Scripts\WindmillArmController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
